<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.gabrielcouto.whatsapp.whatsappclone.activity.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/img_cadastr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/nomeCadastroId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editEmailCadastroId"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editEmailCadastroId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editSenhaCadastroId"
        app:layout_constraintEnd_toEndOf="@+id/nomeCadastroId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nomeCadastroId"
        app:layout_constraintTop_toBottomOf="@+id/nomeCadastroId" />

    <EditText
        android:id="@+id/editSenhaCadastroId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastroId"
        app:layout_constraintEnd_toEndOf="@+id/editEmailCadastroId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editEmailCadastroId"
        app:layout_constraintTop_toBottomOf="@+id/editEmailCadastroId" />

    <Button
        android:id="@+id/btnCadastroId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editSenhaCadastroId"
        app:layout_constraintStart_toStartOf="@+id/editSenhaCadastroId"
        app:layout_constraintTop_toBottomOf="@+id/editSenhaCadastroId" />
</android.support.constraint.ConstraintLayout>
